--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "express-winston": "^4.2.0",
     "mime": "^3.0.0",
     "nest-winston": "^1.6.2",
+    "nestjs-typeorm-paginate": "^4.0.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
